Support gamma in legacy tile requests
